objects/CMPL123CME__Investigation_Template__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Evaluation_Status__c</fullName>
        <label>Investigation/Evaluation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Evaluation_Version__c</fullName>
        <label>Investigation/Evaluation Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Investigation External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Type__c</fullName>
        <label>Investigation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Key_Value__c</fullName>
        <label>Key Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Name__c</fullName>
        <formula>CMPL123CME__Product_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Type</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Investigation_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Type</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Investigation Admin</relationshipLabel>
        <relationshipName>Investigation_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Investigation Admin</label>
    <nameField>
        <displayFormat>INV-T-{00000}</displayFormat>
        <label>Investigation Template No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Key_Value__c</columns>
        <columns>CMPL123CME__Product_Name__c</columns>
        <columns>CMPL123CME__Investigation_Type__c</columns>
        <columns>CMPL123CME__Investigation_Evaluation_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>